welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value nbpas
    for (compteur <- 1 to nbpas){
                          ^Program:9: error: not found: value nbpas
  for (compteur1 <- 1 to nbpas){
                         ^