welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int,versLAvant: Boolean){
  if (versLAvant){
    for (compteur <- 1 to nbpas){
      avance()
    }
    return 
  }
  for (compteur1 <- 1 to nbpas){
    recule()
  }
  return
}